--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,12 @@ input, select, textarea {
 	appearance: none;
 }
 
+.nav ul {
+	text-align:center;
+	padding:0;
+	margin:0;
+}
+
 /* Basic */
 
 	html {
