--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1711,7 +1711,7 @@ input, select, textarea {
 
 	#nav {
 		position: absolute;
-		right: 2em;
+		/* right: 2em; */
 		top: 0;
 		line-height: 5.5em;
 	}
