--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1721,7 +1721,8 @@ input, select, textarea {
 	}
 
 		#nav > ul > li {
-			float: left;
+			float: none;
+			display: inline-block;
 			padding: 0 0.8em 0 0.8em;
 		}
 
