--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1714,7 +1714,7 @@ input, select, textarea {
 		/* right: 2em; */
 		top: 0;
 		line-height: 5.5em;
-		display: inline-block;
+		/* display: inline-block; */
 	}
 
 	#nav > ul {
