--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,800");
+@import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
 @import url("fontawesome-all.min.css");
 
 /*
